cp project/force-app/main/default/objects/Channel_Partner__c/Channel_Partner__c.object-meta.xml
<CustomObject>
    <label>Channel Partner</label>
    <pluralLabel>Channel Partners</pluralLabel>
    <nameField><label>CP Name</label><type>Text</type><length>120</length></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>