cp project/force-app/main/default/objects/Channel_Partner__c/fields/Aadhaar_Number__c.field-meta.xml
<CustomField><fullName>Aadhaar_Number__c</fullName><label>Aadhaar Number</label><length>40</length><type>Text</type></CustomField>