cp project/force-app/main/default/objects/Channel_Partner__c/fields/Active__c.field-meta.xml
<CustomField><fullName>Active__c</fullName><label>Active</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>