cp project/force-app/main/default/objects/Channel_Partner__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>