cp project/force-app/main/default/objects/Channel_Partner__c/fields/Company_Name__c.field-meta.xml
<CustomField><fullName>Company_Name__c</fullName><label>Company Name</label><length>160</length><type>Text</type></CustomField>