cp project/force-app/main/default/objects/Channel_Partner__c/fields/CP_App_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_App_ID__c</fullName>
    <label>CP App ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>