cp project/force-app/main/default/objects/Channel_Partner__c/fields/CP_ID__c.field-meta.xml
<CustomField><fullName>CP_ID__c</fullName><label>CP ID</label><length>80</length><type>Text</type><externalId>true</externalId><unique>true</unique></CustomField>