cp project/force-app/main/default/objects/Channel_Partner__c/fields/PAN_Number__c.field-meta.xml
<CustomField><fullName>PAN_Number__c</fullName><label>PAN Number</label><length>40</length><type>Text</type></CustomField>