cp project/force-app/main/default/objects/Channel_Partner__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>