cp project/force-app/main/default/objects/Channel_Partner__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending Verification</fullName><default>true</default><label>Pending Verification</label></value>
            <value><fullName>Re-upload Required</fullName><label>Re-upload Required</label></value>
            <value><fullName>Under Verification</fullName><label>Under Verification</label></value>
            <value><fullName>Submitted For Approval</fullName><label>Submitted For Approval</label></value>
            <value><fullName>Approved</fullName><label>Approved</label></value>
            <value><fullName>Active</fullName><label>Active</label></value>
            <value><fullName>Rejected</fullName><label>Rejected</label></value>
            <value><fullName>Inactive</fullName><label>Inactive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>