cp project/force-app/main/default/objects/Channel_Partner__c/listViews/Active_Channel_Partners.listView-meta.xml
<ListView>
    <fullName>Active_Channel_Partners</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>CP_ID__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Channel Partners</label>
</ListView>